# manga_bot

./: .env.example  .gitignore  main.py  pyproject.toml
.github/workflows/: run_bot.yml
ai/: base_provider.py  gemini_provider.py
config/: settings.py
core/: job_manager.py  queue_manager.py  user_settings_manager.py
models/: element.py  page_data.py  page_job.py  scene.py
parser/: validator.py
prompts/: A.txt  default_translator.txt  japanese_culture_expert.txt
renderer/: message_builder.py  paginator.py  telegram_renderer.py
utils/: logger.py  markdown_escaper.py  prompt_manager.py  template_manager.py
