[project]
name = "manga-translation-bot"
version = "1.1.0"
description = "Production-ready Manga/Manhwa Translation Telegram Bot"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot[ext]>=21.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.9",
    "jinja2>=3.1",  # 🆕 محرك القوالب الديناميكي
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff"
]

[tool.ruff]
line-length = 100
target-version = "py311"